# StimRGS_v1

./: .gitignore  pyproject.toml
notebooks/: calculator.ipynb  meas_5_8.ipynb  rewrite.ipynb
src/networkx/: graph_operations.py  graph_structure.py  network.ipynb
src/stimrgs_v1/: 3arms_2bells_experiment.ipynb  3arms_3bells_experiment.ipynb  4arms_experiment.ipynb  6arms_experiment.ipynb  __init__.py  collector.py  maximize_bell_experiment.ipynb  new_fn.py  notebook.ipynb  stabilizer_operations.py  utils.py
src/stimrgs_v1/maximize_bell_experiment/: 3arms.ipynb  4arms.ipynb  5arms.ipynb  7arms.ipynb  8arms.ipynb
src/stimrgs_v1/maximize_bell_experiment/5arms/: meas_10.ipynb  meas_11.ipynb  meas_12_13.ipynb  meas_14_16.ipynb  meas_5_8.ipynb  meas_9.ipynb
src/stimrgs_v1/maximize_bell_experiment/6amrs.ipynb/: 6arms.ipynb  meas_12_13.ipynb  meas_14_15.ipynb  meas_16_20.ipynb  meas_4_8.ipynb  meas_9_11.ipynb
src/stimrgs_v1/notebooks/: playground_2.ipynb  playground_3.ipynb  playground_4.ipynb
src/stimrgs_v1/notebooks/data_rgs_plots_bsm_0.5/: rgs_best_configurations.csv  rgs_summary.csv
src/stimrgs_v1/notebooks/data_rgs_plots_bsm_1.0/: rgs_best_configurations.csv  rgs_summary.csv
src/stimrgs_v1/src/: notebook.ipynb
tests/: test_graph_operations.py  test_new_fn.py  test_stabilizer_operations.py  test_utils.py
tests/different_arms/: test_3arms_rgs.py  test_4arms_rgs.py  test_5arms_rgs.py
