[project]
name = "stimrgs-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Poramat", email = "poramat.chianvichai@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "stim>=1.14.0",
]

[project.scripts]
stimrgs-v1 = "stimrgs_v1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.395",
    "pytest>=8.3.4",
]
